--- a/erp_app/templates/accounts/register.html
+++ b/erp_app/templates/accounts/register.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ERP - Registration</title>
+    <title>ERP - Register</title>
     <link href="{% static 'styles/styles.css' %}" rel="stylesheet" />
   </head>
   <body>
     <h1>ERP</h1>
-    <h2>Registration</h2>
-    <form method="POST">
-      {% csrf_token %} {{ form.as_p }}
-
-      <!-- Sprawdź, czy są błędy, ale tylko wyświetlaj je przy polach -->
-
-      <button type="submit">Submit</button>
+    <div class="container">
+      <h2>Register</h2>
+      <form method="POST" action="% url 'register' %">
+        {% csrf_token %} {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </div>
+   
     </form>
   </body>
 </html>
