--- a/erp_app/templates/auth.html
+++ b/erp_app/templates/auth.html
@@ -12,7 +12,7 @@
     <form action="{% url 'login' %}" method="get">
       <button type="submit">Log in</button>
     </form>
-    <form action="{% url 'registration' %}" method="get">
+    <form action="{% url 'register' %}" method="get">
       <button type="submit">Create new user</button>
     </form>
   </body>
