--- a/erp_app/templates/accounts/register.html
+++ b/erp_app/templates/accounts/register.html
@@ -11,7 +11,7 @@
     <h1>ERP</h1>
     <div class="container">
       <h2>Register</h2>
-      <form method="POST" action="% url 'register' %">
+      <form method="POST" action="{% url 'register' %}">
         {% csrf_token %} {{ form.as_p }}
         <button type="submit">Submit</button>
     </div>
