--- a/erp_app/templates/erp/dashboard.html
+++ b/erp_app/templates/erp/dashboard.html
@@ -8,14 +8,19 @@
     <link href="{% static 'styles/styles.css'%}" rel="stylesheet" />
   </head>
   <body>
-    <h1>ERP</h1>
-    <a href="{% url 'logout' %}">Logout</a>
-    <div id="users">
-      <h2>Users</h2>
-      <ul>
-        {% for user in users %}
-        <li>{{ user }}</li>
-        {% endfor%}
+    <div class="container">
+      <h1>Dashboard</h1>
+      <span> Welcome, {{request.user.username}}. </span>
+
+      <a href="{% url 'logout' %}">Logout</a>
+
+      <div id="users">
+        <h2>Users</h2>
+        <ul>
+          {% for user in users %}
+          <li>{{ user }}</li>
+          {% endfor%}
+      </div>
     </div>
   </body>
 </html>
