--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -2,6 +2,9 @@ body {
     background-color: bisque;
 }
 
-.errorlist {
-    color:tomato;;
+.container .errorlist {
+    color: rgb(179, 34, 8) !important;
+    list-style-type: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
