--- a/erp_app/templates/erp/dashboard.html
+++ b/erp_app/templates/erp/dashboard.html
@@ -11,16 +11,19 @@
     <div class="container">
       <h1>Dashboard</h1>
       <span> Welcome, {{request.user.username}}. </span>
+      {% if user_groups %}
+      <p>Jesteś w grupach:</p>
+      <ul>
+        {% for group in user_groups %}
+        <li>{{ group.name }}</li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <p>Nie należysz do żadnej grupy.</p>
+      {% endif %}
 
+      <a href="{% url 'group_list' %}">Group list</a>
       <a href="{% url 'logout' %}">Logout</a>
-
-      <div id="users">
-        <h2>Users</h2>
-        <ul>
-          {% for user in users %}
-          <li>{{ user }}</li>
-          {% endfor%}
-      </div>
     </div>
   </body>
 </html>
