--- a/erp_app/templates/teams/assignation.html
+++ b/erp_app/templates/teams/assignation.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Create Group</h1>
+      <h1>Assign Users to Team</h1>
       <form method="post">
         {% csrf_token %} {{ form.as_p }}
-        <button type="submit">Save Group</button>
+        <button type="submit">Assign Users</button>
       </form>
     </div>
   </body>
