--- a/erp_app/templates/teams/assignation.html
+++ b/erp_app/templates/teams/assignation.html
@@ -12,7 +12,7 @@
       <h1>Assign Users to Team</h1>
       <form method="post">
         {% csrf_token %} {{ form.as_p }}
-        <button type="submit">Assign Users</button>
+        <button type="submit">Assign Role</button>
       </form>
     </div>
   </body>
