--- a/erp_app/templates/auth.html
+++ b/erp_app/templates/auth.html
@@ -5,15 +5,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ERP</title>
-    <link href="{% static 'styles/styles.css'%}" rel="stylesheet" />
+    <link href="{% static 'styles/styles.css' %}" rel="stylesheet" />
   </head>
   <body>
-    <h1>ERP</h1>
-    <form action="{% url 'login' %}" method="get">
-      <button type="submit">Log in</button>
-    </form>
-    <form action="{% url 'register' %}" method="get">
-      <button type="submit">Create new user</button>
-    </form>
+    <div class="container">
+      <h1>ERP</h1>
+      <form action="{% url 'login' %}" method="get">
+        <button type="submit">Log in</button>
+      </form>
+      <form action="{% url 'register' %}" method="get">
+        <button type="submit">Create new user</button>
+      </form>
+    </div>
   </body>
 </html>
