--- a/erp_app/templates/erp/dashboard.html
+++ b/erp_app/templates/erp/dashboard.html
@@ -24,7 +24,15 @@
     <p>You are not part of any team.</p>
     {% endif %}
 
-    <a href="{% url 'team_create' %}">Add Team</a>
-    <a href="{% url 'logout' %}">Logout</a>
+    <h2>Actions</h2>
+    <div>
+      <a href="{% url 'team_create' %}">Add Team</a>
+    </div>
+    <div>
+      <a href="{% url 'join_team_view' %}">Join the Team</a> <!-- Link to join a team by identifier -->
+    </div>
+    <div>
+      <a href="{% url 'logout' %}">Logout</a>
+    </div>
   </body>
 </html>
