--- a/erp_app/templates/accounts/register.html
+++ b/erp_app/templates/accounts/register.html
@@ -8,17 +8,15 @@
     <link href="{% static 'styles/styles.css' %}" rel="stylesheet" />
   </head>
   <body>
-    <h1>ERP</h1>
     <div class="container">
+      <h1>ERP</h1>
       <h2>Register</h2>
       <form method="POST" action="{% url 'register' %}">
-        {% csrf_token %} {{ form.as_p }}
+        {% csrf_token %}
+        {{ form.as_p }}
         <button type="submit">Submit</button>
+      </form>
+      <p>Already have an account? <a href="{% url 'login' %}">Log in here</a></p>
     </div>
-    </form>
-
-    <p>Already have an account? <a href="{% url 'login' %}" > Login here</a></p>
-  </form>
-
   </body>
 </html>
