--- a/erp_app/templates/erp/dashboard.html
+++ b/erp_app/templates/erp/dashboard.html
@@ -8,6 +8,7 @@
     <link href="{% static 'styles/styles.css' %}" rel="stylesheet" />
   </head>
   <body>
+    <div class="container">
     <h1>Welcome, {{ request.user.username }}</h1>
 
     {% if user_teams %}
@@ -34,5 +35,6 @@
     <div>
       <a href="{% url 'logout' %}">Logout</a>
     </div>
+  </div>
   </body>
 </html>
