--- a/erp_app/templates/erp/projects/add_project.html
+++ b/erp_app/templates/erp/projects/add_project.html
@@ -1,13 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Project</title>
-    <link href="{% static 'styles/styles.css' %}" rel="stylesheet" />
-  </head>
-  <body>
+{% extends 'erp/base.html' %}
+
+{% block title %}Add Project{% endblock %}
+
+{% block content %}
     <h1>Add Project</h1>
     <form method="post">
       {% csrf_token %}
@@ -15,5 +10,5 @@
       <button type="submit">Add Project</button>
     </form>
     <a href="{% url 'team_page_view' team.id %}">Back to Team Page</a>
-  </body>
-</html>
+{% endblock %}
+
