--- a/erp_app/templates/erp/tasks/edit_task.html
+++ b/erp_app/templates/erp/tasks/edit_task.html
@@ -1,30 +1,26 @@
+{% extends 'erp/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Task</title>
-    <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
-</head>
-<body>
 
+{% block title %}Edit Task: {{ task.name }}{% endblock %}
+
+{% block content %}
 <h1>Edit Task: {{ task.name }}</h1>
 <form method="post" enctype="multipart/form-data" id="editTaskForm">
     {% csrf_token %}
     {{ form.as_p }}
     <div id="milestones-container">
         <label>Milestones:</label>
+        <button class="btn-small" type="button" id="addMilestoneButton">Add Milestone</button>
         {% for milestone in milestones %}
         <div class="milestone-item">
             <input type="text" name="milestone" value="{{ milestone }}" />
-            <button type="button" onclick="removeMilestone(this)">Remove</button>
+            <button class="btn-small" type="button" onclick="removeMilestone(this)">Remove</button>
         </div>
         {% endfor %}
     </div>
-    <button type="button" id="addMilestoneButton">Add Milestone</button>
     <button type="submit">Save Task</button>
 </form>
 
 <script src="{% static 'js/edit_task.js' %}"></script>
-</body>
-</html>
+{% endblock %}
+
