--- a/erp_app/templates/erp/projects/project_page.html
+++ b/erp_app/templates/erp/projects/project_page.html
@@ -20,8 +20,8 @@
                         <span>{{ task.name }}</span>
                         <button class="btn-small" onclick="showTaskDetails({{ project.team.id }}, {{ project.id }}, {{ task.id }})">View Details</button>
                     </li>
-                </ul> <br />
-            {% endfor %}
+                </ul>
+            {% endfor %} <br />
         {% endfor %}
         
         </li>
